Lesson 7- formatting with prettier, fixed swagger
