# cse341_project/middleware/validate.js
@@ -1,50 +1,48 @@
 const validator = require('../helpers/validate');
 
 const saveBook = (req, res, next) => {
-    const validationRule = {
-        title: 'required|string',
-        author: 'required|string',
-        genre: 'string',
-        finishedReading: 'string'
-    };
-    validator(req.body, validationRule, {}, (err, status) => {
-        if (!status) {
-            res.status(412).send({
-                success:false,
-                message: 'Validation failed',
-                data: err
-            });
-        } else {
-            next();
-        }
-    });
+  const validationRule = {
+    title: 'required|string',
+    author: 'required|string',
+    genre: 'string',
+    finishedReading: 'string'
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
 };
 
 const saveBookSeries = (req, res, next) => {
-    const validationRule = {
-        title: 'required|string',
-        author: 'required|string',
-        genre: 'string',
-        numberOfBooks: 'required|integer',
-        published: 'string',
-        finishedReading: 'string'
-    };
-    validator(req.body, validationRule, {}, (err, status) => {
-        if (!status) {
-            res.status(412).send({
-                success:false,
-                message: 'Validation failed',
-                data: err
-            });
-        } else {
-            next();
-        }
-    });
+  const validationRule = {
+    title: 'required|string',
+    author: 'required|string',
+    genre: 'string',
+    numberOfBooks: 'required|integer',
+    published: 'string',
+    finishedReading: 'string'
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
 };
 
-
-
 module.exports = {
-    saveBook,
-    saveBookSeries
+  saveBook,
+  saveBookSeries
 };
