# cse341_project/routes/index.js
@@ -1,7 +1,7 @@
 const router = require('express').Router();
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../swagger.json');
-const passport = require ('passport');
+const passport = require('passport');
 
 router.use('/api-docs', swaggerUi.serve);
 router.get('/api-docs', swaggerUi.setup(swaggerDocument));
@@ -10,12 +10,13 @@ router.use('/books', require('./books'));
 router.use('/book-series', require('./book-series'));
 
 router.get('/login', passport.authenticate('github'), (req, res) => {});
-router.get('/logout', function(req, res, next) {
-    req.logout(function(err){
-        if (err) { return next(err);}
-        res.redirect('/');
-    });
+router.get('/logout', function (req, res, next) {
+  req.logout(function (err) {
+    if (err) {
+      return next(err);
+    }
+    res.redirect('/');
+  });
 });
-
 
 module.exports = router;
